kubernetes/utility/apps/networking/traefik/addons/error-pages/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: error-pages
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`{host:.+}`)
      priority: 1
      middlewares:
        - name: networking-traefik-middleware-error-pages@kubernetescrd
      services:
        - kind: Service
          name: error-pages
          namespace: networking
          port: 8080
